ingress/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: ingress
