ingress/private.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: private
    cluster: ingress.private
  name: private
  namespace: ingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: private
      cluster: ingress.private
  template:
    metadata:
      labels:
        app: private
        cluster: ingress.private
    spec:
      serviceAccountName: private
      containers:
        - name: edge
          image: "docker.production.deciphernow.com/deciphernow/gm-proxy:1.2.2"
          imagePullPolicy: IfNotPresent
          args:
            - -c
            - /etc/greymatter/config.yaml
          command:
            - /app/gm-proxy
          ports:
            - name: metrics
              containerPort: 8080
            - name: sidecar
              containerPort: 8443
          volumeMounts:
            - name: sidecar-config
              mountPath: /etc/greymatter
              readOnly: true
            - name: sidecar-tls
              mountPath: /etc/tls
              readOnly: true
            - name: spire-socket
              mountPath: /run/spire/sockets
              readOnly: false
      imagePullSecrets:
        - name: docker.production.deciphernow.com
      volumes:
        - name: sidecar-config
          configMap:
            name: private-sidecar
        - name: sidecar-tls
          secret:
            secretName: greymatter-edge-ingress
        - name: spire-socket
          hostPath:
            path: /run/spire/sockets
            type: DirectoryOrCreate
