ingress/private.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: private
  namespace: ingress
  labels:
    app: private
    cluster: ingress.private
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: sidecar
  selector:
    app: private
    cluster: ingress.private
  type: ClusterIP
