ingress/public.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: public
  namespace: ingress
  labels:
    app: public
    cluster: ingress.public
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: sidecar
  selector:
    app: public
    cluster: ingress.public
  type: LoadBalancer
