ingress/covidapihub.io.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /website/$1
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - covidapihub.io
        - www.covidapihub.io
      secretName: covidapihub.io
  rules:
    - host: covidapihub.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: public
              servicePort: 8443
    - host: www.covidapihub.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: public
              servicePort: 8443
